to support tag of SDP

--- a/app/index.html
+++ b/app/index.html
@@ -187,11 +187,13 @@
 	<script src="scripts/module-jms/pipelines-view-ctrl.js"></script>
 	<script src="scripts/module-sdp/actions/assets-details.js"></script>
 	<script src="scripts/module-sdp/actions/assets-edit.js"></script>
+	<script src="scripts/module-sdp/actions/assets-new.js"></script>
 	<script src="scripts/module-sdp/actions/category-edit.js"></script>
 	<script src="scripts/module-sdp/actions/category-new.js"></script>
 	<script src="scripts/module-sdp/actions/drive-details.js"></script>
 	<script src="scripts/module-sdp/actions/drive-edit.js"></script>
 	<script src="scripts/module-sdp/actions/drive-new.js"></script>
+	<script src="scripts/module-sdp/actions/tag-details.js"></script>
 	<script src="scripts/module-sdp/actions/tag-edit.js"></script>
 	<script src="scripts/module-sdp/actions/tag-new.js"></script>
 	<script src="scripts/module-sdp/directives/sdp-downloaded-link.js"></script>
@@ -209,6 +211,13 @@
 	<script src="scripts/module-sdp/views/drives.js"></script>
 	<script src="scripts/module-sdp/views/links.js"></script>
 	<script src="scripts/module-sdp/views/tags.js"></script>
+	<script src="scripts/module-sdp/wizards/new-asset/ebookPropertiesPage.js"></script>
+	<script src="scripts/module-sdp/wizards/new-asset/filePage.js"></script>
+	<script src="scripts/module-sdp/wizards/new-asset/marketPage.js"></script>
+	<script src="scripts/module-sdp/wizards/new-asset/notsupportPage.js"></script>
+	<script src="scripts/module-sdp/wizards/new-asset/tagsPage.js"></script>
+	<script src="scripts/module-sdp/wizards/new-asset/typePage.js"></script>
+	<script src="scripts/module-sdp/wizards/new-asset/wizard.js"></script>
 	<script src="scripts/module-sdp/wizards/new-category/propertiesPage.js"></script>
 	<script src="scripts/module-sdp/wizards/new-category/wizard.js"></script>
 	<script src="scripts/module-sdp/wizards/new-drive/propertiesPage.js"></script>
