--- a/app/scripts/module-sdp/actions/assets-details-dialog.html
+++ b/app/scripts/module-sdp/actions/assets-details-dialog.html
@@ -1,5 +1,7 @@
 <md-dialog-content layout="column">
-	<div layout="row">
+	<div 
+		layout="row"
+		layout-align="center center">
 		<img style="width:40px; height: 40px; margin: 8px; border-radius: 50%; box-sizing: content-box;"
 			ng-src="{{::asset.cover}}" ng-src-error="" alt="">
 		<h3>{{::asset.title}}</h3>
