--- a/app/scripts/module-sdp/resources/tags.html
+++ b/app/scripts/module-sdp/resources/tags.html
@@ -1,43 +1,31 @@
-<md-content
-	mb-preloading="ctrl.loadingItems" 
-	mb-infinate-scroll="nextPage()"
+<div
+	mb-preloading="ctrl.state === 'busy'"
 	layout="column"
 	flex>
-	
-	<!-- Action bar -->
 	<mb-pagination-bar
-		mb-model="paginatorParameter"
-		mb-reload="reload()"
-		mb-sort-keys="sortKeys"
-		mb-sort-keys-titles="sortKeysTitles"
-		mb-more-actions="moreActions">
+		mb-model="ctrl.queryParameter"
+		mb-reload="ctrl.reload()"
+		mb-sort-keys="ctrl.getSortKeys()"
+		mb-more-actions="ctrl.getActions()"
+		mb-properties="ctrl.properties">
 	</mb-pagination-bar>
-	
-	<!-- Tags list -->
-	<div layout="column"
-		ng-if="ctrl.items.length == 0 && !ctrl.loadingItems">
-		<p style="text-align: center" mb-translate>List is empty.</p>
-	</div>
-	<md-list flex>
-		<md-radio-group ng-model="ctrl.selectedId">
+	<md-content
+		mb-infinate-scroll="ctrl.loadNextPage()"
+		layout="column"
+		flex>
+		<md-list flex>
 			<md-list-item 
-				ng-repeat="pobject in ctrl.items track by pobject.id"
-				class="md-3-line" 
-				ng-click="selectItem(pobject)">
-				<mb-icon>label</mb-icon>
-				<div class="md-list-item-text" 
-					layout="column">
-					<h3>{{pobject.id}}</h3>
-					<h4>{{pobject.name}}</h4>
-					<p>{{pobject.description}}</p>
-				</div>
-				<md-radio-button 
-					ng-value="pobject.id" 
-					class="md-secondary md-primary">
-				</md-radio-button>
+				ng-repeat="item in ctrl.items track by item.id"
+				ng-click="ctrl.toggleResourceSelection(item)">
+				<mb-icon class="md-avatar-icon">label</mb-icon>
+				<p>{{::item.id}} - {{::item.name}}</p>
+				<md-checkbox 
+					ng-show="item.$selected"
+					ng-model="item.$selected"
+					ng-change="ctrl.setResourceSelected(item, item.$selected)">
+				</md-checkbox>
 				<md-divider md-inset></md-divider>
 			</md-list-item>
-		</md-radio-group>
-	</md-list>
-</md-content>
-
+		</md-list>
+	</md-content>
+</div>
