feature: sdp category management

--- a/app/index.html
+++ b/app/index.html
@@ -188,6 +188,7 @@
 	<script src="scripts/module-sdp/actions/assets-details.js"></script>
 	<script src="scripts/module-sdp/actions/assets-edit.js"></script>
 	<script src="scripts/module-sdp/actions/assets-new.js"></script>
+	<script src="scripts/module-sdp/actions/category-details.js"></script>
 	<script src="scripts/module-sdp/actions/category-edit.js"></script>
 	<script src="scripts/module-sdp/actions/category-new.js"></script>
 	<script src="scripts/module-sdp/actions/drive-details.js"></script>
