--- a/app/scripts/module-sdp/wizards/new-asset/marketPage.html
+++ b/app/scripts/module-sdp/wizards/new-asset/marketPage.html
@@ -1,19 +1,12 @@
 <md-input-container class="md-block md-icon-float">
-	<label translate>Name</label>
+	<label translate>Price</label>
 	<input 
-		aria-label="Content Name"
-		name="name"
-		ng-model="ctrl.name"
+		aria-label="Market price"
+		name="price"
+		ng-model="ctrl.price"
 		ng-model-options="{getterSetter: true, debounce: 200}">
 </md-input-container>
-<md-input-container class="md-block">
-	<label translate>Description</label>
-	<textarea 
-		aria-label="Content Description"
-		name="description"
-		ng-model="ctrl.description"
-		ng-model-options="{getterSetter: true, debounce: 200}"></textarea>
-</md-input-container>
+
 
 
 
