--- a/app/scripts/module-sdp/wizards/new-asset/genrePage.html
+++ b/app/scripts/module-sdp/wizards/new-asset/genrePage.html
@@ -1,16 +1,16 @@
 <md-chips 
-	ng-model="ctrl.tags" 
+	ng-model="ctrl.genres" 
 	md-autocomplete-snap
-	input-aria-label="Tags">
+	input-aria-label="Genre">
 	<md-autocomplete 
 		input-aria-describedby="autocompleteTitle" 
-		placeholder="Search for a tag"
+		placeholder="Search for a Genre"
 		md-no-cache="true"
 		md-autoselect="true"
 		md-selected-item="ctrl.selectedItem" 
 		md-search-text="ctrl.searchText"
-		md-items="item in ctrl.tagSearch(ctrl.searchText)" 
-		md-item-text="item.title"
+		md-items="item in ctrl.categorySearch(ctrl.searchText)" 
+		md-item-text="item.name"
 		md-clear-button="true">
 		<md-item-template>
 			<span md-highlight-text="ctrl.searchText">{{item.id}} - {{item.name}}</span>
@@ -18,8 +18,8 @@
 		<md-not-found>
 			<md-button
 				style="width: 100%"
-				ng-click="ctrl.createNewTag(ctrl.searchText, $event)">
-				<span mb-translate>Create a New Tag</span> (<em>{{ctrl.searchText}}</em>)
+				ng-click="ctrl.createNewCategory(ctrl.searchText, $event)">
+				<span mb-translate>Create the Genre</span> (<em>{{ctrl.searchText}}</em>)
 			</md-button>
 		</md-not-found>
 	</md-autocomplete>
