--- a/app/scripts/module-sdp/wizards/new-asset/marketPage.html
+++ b/app/scripts/module-sdp/wizards/new-asset/marketPage.html
@@ -1,13 +1,21 @@
-<md-input-container class="md-block md-icon-float">
+<md-input-container class="md-block">
 	<label translate>Price</label>
-	<input 
+	<input
+		type="number"
 		aria-label="Market price"
 		name="price"
 		ng-model="ctrl.price"
 		ng-model-options="{getterSetter: true, debounce: 200}">
 </md-input-container>
 
-
+<md-input-container class="md-block">
+	<label translate>state</label>
+	<input 
+		aria-label="Market state"
+		name="state"
+		ng-model="ctrl.state"
+		ng-model-options="{getterSetter: true, debounce: 200}">
+</md-input-container>
 
 
 
