--- a/app/scripts/module-sdp/editors/asset.html
+++ b/app/scripts/module-sdp/editors/asset.html
@@ -3,162 +3,113 @@
 	<mb-titled-block 
 		mb-title="{{'Properties' | translate}}" 
 		layout="column">
-		<table mb-table>
-			<!-- Asset and description -->
-			<tr>
-				<td mb-translate>ID</td>
-				<td>{{::ctrl.model.id}}</td>
-			</tr>
-			<tr>
-				<td mb-translate>Title</td>
-				<td>
-					<mb-inline
-						ng-model="ctrl.model.title"
-						mb-inline-type="text"
-						mb-inline-label="Title"
-						mb-inline-enable="true"
-						mb-inline-on-save="ctrl.updateModel()">{{ctrl.model.title || '...'}}</mb-inline>
-				</td>
-			</tr>
-			<tr>
-				<td mb-translate>Description</td>
-				<td>
-					<mb-inline
-						ng-model="ctrl.model.description"
-						mb-inline-type="text"
-						mb-inline-label="Description"
-						mb-inline-enable="true"
-						mb-inline-on-save="ctrl.updateModel()">{{ctrl.model.description || '...'}}</mb-inline>
-				</td>
-			</tr>
-			<tr>
-				<td mb-translate>Cover</td>
-				<td>
-					<mb-inline
-						ng-model="ctrl.model.cover"
-						mb-inline-type="String"
-						mb-inline-label="Cover"
-						mb-inline-enable="true"
-						mb-inline-on-save="ctrl.updateModel()">{{ctrl.model.cover || '...'}}</mb-inline>
-				</td>
-			</tr>
-			<tr>
-				<td mb-translate>Create Date</td>
-				<td>{{ctrl.model.creation_dtime}}</td>
-			</tr>
-			<tr>
-				<td mb-translate>Last Modification Date</td>
-				<td>{{ctrl.model.modif_dtime}}</td>
-			</tr>
+		<!-- Asset and description -->
+		<section>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>ID</label>
+				<input 
+					ng-model="ctrl.model.id"
+					disabled>
+			</md-input-container>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>Title</label>
+				<input 
+					ng-model="ctrl.model.title"
+					ng-change="ctrl.setDerty(true)">
+			</md-input-container>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>Description</label>
+				<textarea
+					ng-model="ctrl.model.description"
+					ng-change="ctrl.setDerty(true)"></textarea>
+			</md-input-container>
+			<md-input-container 
+				class="md-icon-float md-icon-right md-block">
+				<label mb-translate>Cover</label>
+				<input
+					ng-model="ctrl.model.cover"
+					ng-change="ctrl.setDerty(true)" />
+				<mb-icon ng-click="ctrl.setImageUrl('cover', $event)">more_horiz</mb-icon>
+			</md-input-container>
 			
-			<!-- File -->
-			<tr>
-				<td mb-translate>File Name</td>
-				<td>
-					<mb-inline
-						ng-model="ctrl.model.file_name"
-						mb-inline-type="String"
-						mb-inline-label="Name"
-						mb-inline-enable="true"
-						mb-inline-on-save="ctrl.updateModel()">{{ctrl.model.file_name || '...'}}</mb-inline>
-				</td>
-			</tr>
-			<tr>
-				<td mb-translate>File Path</td>
-				<td>
-					<mb-inline
-						ng-model="ctrl.model.path"
-						mb-inline-type="String"
-						mb-inline-label="Path"
-						mb-inline-enable="true"
-						mb-inline-on-save="ctrl.updateModel()">{{ctrl.model.path || '...'}}</mb-inline>
-				</td>
-			</tr>
-			<tr>
-				<td mb-translate>File Size</td>
-				<td>
-					<mb-inline
-						ng-model="ctrl.model.size"
-						mb-inline-type="Integer"
-						mb-inline-label="Size"
-						mb-inline-enable="true"
-						mb-inline-on-save="ctrl.updateModel()">{{ctrl.model.size || '...'}}</mb-inline>
-				</td>
-			</tr>
-			<tr>
-				<td mb-translate>File Mimetype</td>
-				<td>
-					<mb-inline
-						ng-model="ctrl.model.mime_type"
-						mb-inline-type="String"
-						mb-inline-label="Mimetype"
-						mb-inline-enable="true"
-						mb-inline-on-save="ctrl.updateModel()">{{ctrl.model.mime_type || '...'}}</mb-inline>
-				</td>
-			</tr>
-			<tr>
-				<td mb-translate>File Media Type</td>
-				<td>
-					<mb-inline
-						ng-model="ctrl.model.media_type"
-						mb-inline-type="String"
-						mb-inline-label="Media Type"
-						mb-inline-enable="true"
-						mb-inline-on-save="ctrl.updateModel()">{{ctrl.model.media_type || '...'}}</mb-inline>
-				</td>
-			</tr>
-			
-			<!-- Management -->
-			<tr>
-				<td mb-translate>Price</td>
-				<td>
-					<mb-inline
-						ng-model="ctrl.model.price"
-						mb-inline-type="float"
-						mb-inline-label="Media Type"
-						mb-inline-enable="true"
-						mb-inline-on-save="ctrl.updateModel()">{{ctrl.model.media_type || '...'}}</mb-inline>
-				</td>
-			</tr>
-			<tr>
-				<td mb-translate>Download</td>
-				<td>{{ctrl.model.download}}</td>
-			</tr>
-			<tr>
-				<td mb-translate>State</td>
-				<td>{{ctrl.model.state}}</td>
-			</tr>
-			
-			<!-- Storage -->
-			<tr>
-				<td mb-translate>Parent</td>
-				<td>{{ctrl.model.parent_id}}</td>
-			</tr>
-			<tr>
-				<td mb-translate>Owner</td>
-				<td>{{ctrl.model.owner_id}}</td>
-			</tr>
-			<tr>
-				<td mb-translate>Drive</td>
-				<td>{{ctrl.model.drive_id}}</td>
-			</tr>
-		</table>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>Create Date</label>
+				<input 
+					ng-model="ctrl.model.creation_dtime"
+					disabled>
+			</md-input-container>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>Last Modification Date</label>
+				<input 
+					ng-model="ctrl.model.modif_dtime"
+					disabled>
+			</md-input-container>
+		</section>
+		
+		
+		<!-- File -->
+		<section>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>File Name</label>
+				<input
+					ng-model="ctrl.model.file_name"
+					ng-change="ctrl.setDerty(true)" />
+			</md-input-container>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>File Path</label>
+				<input
+					ng-model="ctrl.model.path"
+					ng-change="ctrl.setDerty(true)" />
+			</md-input-container>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>File Size</label>
+				<input
+					ng-model="ctrl.model.size"
+					ng-change="ctrl.setDerty(true)" />
+			</md-input-container>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>Mimetype</label>
+				<input
+					ng-model="ctrl.model.mime_type"
+					ng-change="ctrl.setDerty(true)" />
+			</md-input-container>
+			<md-input-container 
+				class="md-block">
+				<label mb-translate>Media Type</label>
+				<input
+					ng-model="ctrl.model.media_type"
+					ng-change="ctrl.setDerty(true)" />
+			</md-input-container>
+		</section>
+
 		<!-- Action bar -->
-		<div 
-			style="width: 100%;"
-			layout="row">
+		<div layout="row">
 			<span flex></span>
-			<mb-button 
-				class="md-raised md-primary" 
-				ng-click="ctrl.deleteModel()">
-				<mb-icon>delete</mb-icon>
+			<md-button 
+				class="md-raised md-primary"
+				ng-disabled="!ctrl.isDerty()"
+				ng-click="ctrl.updateModel()">
+				<span mb-translate>Save</span>
+			</md-button>
+			<md-button 
+				class = "md-raised md-accent"
+				ng-click="ctrl.deleteModel($event)">
 				<span mb-translate>Delete</span>
-			</mb-button>
+			</md-button>
 		</div>
 	</mb-titled-block>
 
 	<!-- categories -->
-	<mb-titled-block mb-title="{{'Categories'  | translate}}" layout="column">
+	<!--<mb-titled-block mb-title="{{'Categories'  | translate}}" layout="column">
 		<div class="sdp-chips-list" style="direction:rtl;">
 			<div layout="row" layout-align="start center">
 				<md-chips flex class="custom-chips" ng-model="ctrl.categories" md-removable="true">
@@ -179,10 +130,10 @@
 				<p>This asset is not contained in any category</p>
 			</div>
 		</div>
-	</mb-titled-block>
+	</mb-titled-block>-->
 
 	<!-- tags -->
-	<mb-titled-block mb-title="{{'Tags'  | translate}}" layout="column">
+	<!--<mb-titled-block mb-title="{{'Tags'  | translate}}" layout="column">
 		<div class="sdp-chips-list" style="direction:rtl;">
 			<div layout="row" layout-align="start center">
 				<md-chips flex class="custom-chips" ng-model="ctrl.tags" md-removable="true">
@@ -203,6 +154,6 @@
 				<p>This asset has no any tag.</p>
 			</div>
 		</div>
-	</mb-titled-block>
+	</mb-titled-block>-->
 
 </md-content>
