fixe: https://github.com/viraweb123/vw-dashboard/issues/33

--- a/app/index.html
+++ b/app/index.html
@@ -53,22 +53,13 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/lodash/lodash.js"></script>
-    <script src="bower_components/mustache.js/mustache.js"></script>
-    <script src="bower_components/seen-core/dist/seen-core.js"></script>
-    <script src="bower_components/seen-bank/dist/seen-bank.js"></script>
-    <script src="bower_components/seen-user/dist/seen-user.js"></script>
-    <script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
-    <script src="bower_components/seen-supertenant/dist/seen-supertenant.js"></script>
-    <script src="bower_components/seen-cms/dist/seen-cms.js"></script>
-    <script src="bower_components/seen-monitor/dist/seen-monitor.js"></script>
-    <script src="bower_components/seen-shop/dist/seen-shop.js"></script>
-    <script src="bower_components/seen-seo/dist/seen-seo.js"></script>
     <script src="bower_components/angular-recaptcha/release/angular-recaptcha.js"></script>
     <script src="bower_components/blob-polyfill/Blob.js"></script>
     <script src="bower_components/file-saver.js/FileSaver.js"></script>
     <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/flux/dist/Flux.js"></script>
+    <script src="bower_components/mustache.js/mustache.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-messages/angular-messages.js"></script>
@@ -104,6 +95,7 @@
 	<script src="scripts/actions/model-update.js"></script>
 	<script src="scripts/actions/query-parameter-filters-update.js"></script>
 	<script src="scripts/actions/query-parameter-sorts-update.js"></script>
+	<script src="scripts/app-seen.js"></script>
 	<script src="scripts/controllers/abstract-binaryItem-ctrl.js"></script>
 	<script src="scripts/controllers/abstract-collection-view.js"></script>
 	<script src="scripts/controllers/abstract-collection.js"></script>
@@ -113,6 +105,19 @@
 	<script src="scripts/directives/mb-pagination-bar.js"></script>
 	<script src="scripts/editors/welcome.js"></script>
 	<script src="scripts/factories/layout-provider-default.js"></script>
+	<script src="scripts/factories/object.js"></script>
+	<script src="scripts/factories/PaginatedCollection.js"></script>
+	<script src="scripts/factories/QueryParameter.js"></script>
+	<script src="scripts/factories/seen-backup.js"></script>
+	<script src="scripts/factories/seen-bank.js"></script>
+	<script src="scripts/factories/seen-cms.js"></script>
+	<script src="scripts/factories/seen-monitor.js"></script>
+	<script src="scripts/factories/seen-sdp.js"></script>
+	<script src="scripts/factories/seen-seo.js"></script>
+	<script src="scripts/factories/seen-shop.js"></script>
+	<script src="scripts/factories/seen-supertenant.js"></script>
+	<script src="scripts/factories/seen-tenant.js"></script>
+	<script src="scripts/factories/seen-user.js"></script>
 	<script src="scripts/module-account/actions/change-password.js"></script>
 	<script src="scripts/module-account/actions/logout.js"></script>
 	<script src="scripts/module-account/actions/messages.js"></script>
