--- a/src/modules/account/directives/mbUserMenu.html
+++ b/src/modules/account/directives/mbUserMenu.html
@@ -12,7 +12,7 @@
                 class="img-circle"
                 style="border-radius: 50%; vertical-align: middle;"
                 ng-src="/api/v2/user/accounts/{{app.user.current.id}}/avatar"
-                ng-src-error="https://www.gravatar.com/avatar/{{app.user.current.id|wbmd5}}?d=identicon&size=32">
+                ng-src-error="https://www.gravatar.com/avatar/{{app.user.current.id|mbmd5}}?d=identicon&size=32">
             <span>{{app.user.profile.first_name}} {{app.user.profile.last_name}}</span>
             <mb-icon class="material-icons">keyboard_arrow_down</mb-icon>
         </md-button>
