--- a/src/modules/user/resources/accounts.html
+++ b/src/modules/user/resources/accounts.html
@@ -21,7 +21,7 @@
 				<img 
 					class="md-avatar"
 					ng-src="/api/v2/user/accounts/{{::user.id}}/avatar" 
-					ng-src-error="https://www.gravatar.com/avatar/{{ ::user.id | wbmd5 }}?d=identicon&size=32"/>
+					ng-src-error="https://www.gravatar.com/avatar/{{ ::user.id | mbmd5 }}?d=identicon&size=32"/>
 				<div 
 					class="md-list-item-text" 
 					layout="column">
