--- a/src/modules/cms/editors/term-taxonomy.html
+++ b/src/modules/cms/editors/term-taxonomy.html
@@ -1,7 +1,4 @@
-<md-content
-	layout-padding
-	style="max-width: 100%; overflow: auto;"
-	flex>
+<md-content>
 	<mb-titled-block 
 		mb-progress="ctrl.isBusy()"
 		mb-title="{{'Taxonomy' | translate}}"
