--- a/src/modules/cms/editors/term.html
+++ b/src/modules/cms/editors/term.html
@@ -1,6 +1,4 @@
-<md-content
-	style="max-width: 100%; overflow: auto;"
-    flex>
+<md-content>
     <mb-titled-block 
         ng-show="!ctrl.edit"
         mb-progress="ctrl.loadingTerm || ctrl.savingTerm || ctrl.removingTerm"
