--- a/src/modules/cms/directives/amdContentPreview.html
+++ b/src/modules/cms/directives/amdContentPreview.html
@@ -12,7 +12,9 @@
 		style="border: solid 1px;border-color:inherit; max-width: 100%;"
 		ng-if="type === 'audio'"
 		controls>
-		<source src="/api/v2/cms/contents/{{content.id}}/content" type="{{content.mime_type}}">
+		<source 
+			ng-src="/api/v2/cms/contents/{{content.id}}/content" 
+			type="{{content.mime_type}}">
 		Your browser does not support the audio tag.
 	</audio>
 
@@ -21,7 +23,9 @@
 		style="border: solid 1px;border-color:inherit; max-width: 100%;"
 		ng-if="type === 'video'"
 		controls>
-		<source src="/api/v2/cms/contents/{{content.id}}/content" type="{{content.mime_type}}">
+		<source 
+			ng-src="/api/v2/cms/contents/{{content.id}}/content" 
+			type="{{content.mime_type}}">
 		Your browser does not support the video tag.
 	</video>
 
