--- a/src/modules/cms/editors/content-properties.html
+++ b/src/modules/cms/editors/content-properties.html
@@ -1,5 +1,4 @@
-<md-content
-	style="overflow: auto;">
+<md-content>
 	<mb-titled-block 
 		mb-title="Information"
 		mb-more-actions="contentMoreActions"
@@ -22,102 +21,102 @@
 			<table
 				md-margin
 				style="min-width: 70%">
-					<tr>
-						<td mb-translate>ID</td>
-						<td>{{::ctrl.content.id}}</td>
-					</tr>
-					<tr>
-						<td mb-translate>Name</td>
-						<td>
-							<mb-inline
-								ng-model="ctrl.content.name"
-								mb-inline-type="text"
-								mb-inline-label="Name"
-								mb-inline-enable="true"
-								mb-inline-on-save="ctrl.updateContent()">{{ctrl.content.name || '...'}}</mb-inline>
-						</td>
-					</tr>
-					<tr>
-						<td mb-translate>Title</td>
-						<td>
-						  <mb-inline
-							  ng-model="ctrl.content.title"
-							  mb-inline-type="text"
-							  mb-inline-label="Title"
-							  mb-inline-enable="true"
-							  mb-inline-on-save="ctrl.updateContent()">
-							  {{ctrl.content.title || '...'}}
-						  </mb-inline>
-						 </td>
-					</tr>
-					<tr>
-						<td mb-translate>Description</td>
-						<td>
-						  <mb-inline
-							  ng-model="ctrl.content.description"
-							  mb-inline-type="textarea"
-							  mb-inline-label="Description"
-							  mb-inline-enable="true"
-							  mb-inline-on-save="ctrl.updateContent()">
-							  {{ctrl.content.description || '...'}}
-						  </mb-inline>
-						 </td>
-					</tr>
-					<tr>
-						<td mb-translate>File name</td>
-						<td>
-						  <mb-inline
-							  ng-model="ctrl.content.file_name"
-							  mb-inline-type="text"
-							  mb-inline-label="File name"
-							  mb-inline-enable="true"
-							  mb-inline-on-save="ctrl.updateContent()">
-							  {{ctrl.content.file_name || '...'}}
-						  </mb-inline>
-						 </td>
-					</tr>
-					<tr>
-						<td mb-translate>File size</td>
-						<td>{{ctrl.content.file_size}}</td>
-					</tr>
-					<tr>
-						<td mb-translate>Media type</td>
-						<td>
-						  <mb-inline
-							  ng-model="ctrl.content.media_type"
-							  mb-inline-type="text"
-							  mb-inline-label="Media type"
-							  mb-inline-enable="true"
-							  mb-inline-on-save="ctrl.updateContent()">
-							  {{ctrl.content.media_type || '...'}}
-						  </mb-inline>
-						 </td>
-					</tr>
-					<tr>
-						<td mb-translate>Mimetype</td>
-						<td>
-						  <mb-inline
-							  ng-model="ctrl.content.mime_type"
-							  mb-inline-type="text"
-							  mb-inline-label="Mimetype"
-							  mb-inline-enable="true"
-							  mb-inline-on-save="ctrl.updateContent()">
-							  {{ctrl.content.mime_type || '...'}}
-						  </mb-inline>
-						 </td>
-					</tr>
-					<tr>
-						<td mb-translate>Downloads count</td>
-						<td>{{::ctrl.content.downloads}}</td>
-					</tr>
-					<tr>
-						<td mb-translate>Creation Date</td>
-						<td>{{ctrl.content.creation_dtime | mbDate}}</td>
-					</tr>
-					<tr>
-						<td mb-translate>Last Modification Date</td>
-						<td>{{ctrl.content.modif_dtime | mbDate}}</td>
-					</tr>
+				<tr>
+					<td mb-translate>ID</td>
+					<td>{{::ctrl.content.id}}</td>
+				</tr>
+				<tr>
+					<td mb-translate>Name</td>
+					<td>
+						<mb-inline
+							ng-model="ctrl.content.name"
+							mb-inline-type="text"
+							mb-inline-label="Name"
+							mb-inline-enable="true"
+							mb-inline-on-save="ctrl.updateContent()">{{ctrl.content.name || '...'}}</mb-inline>
+					</td>
+				</tr>
+				<tr>
+					<td mb-translate>Title</td>
+					<td>
+					  <mb-inline
+						  ng-model="ctrl.content.title"
+						  mb-inline-type="text"
+						  mb-inline-label="Title"
+						  mb-inline-enable="true"
+						  mb-inline-on-save="ctrl.updateContent()">
+						  {{ctrl.content.title || '...'}}
+					  </mb-inline>
+					 </td>
+				</tr>
+				<tr>
+					<td mb-translate>Description</td>
+					<td>
+					  <mb-inline
+						  ng-model="ctrl.content.description"
+						  mb-inline-type="textarea"
+						  mb-inline-label="Description"
+						  mb-inline-enable="true"
+						  mb-inline-on-save="ctrl.updateContent()">
+						  {{ctrl.content.description || '...'}}
+					  </mb-inline>
+					 </td>
+				</tr>
+				<tr>
+					<td mb-translate>File name</td>
+					<td>
+					  <mb-inline
+						  ng-model="ctrl.content.file_name"
+						  mb-inline-type="text"
+						  mb-inline-label="File name"
+						  mb-inline-enable="true"
+						  mb-inline-on-save="ctrl.updateContent()">
+						  {{ctrl.content.file_name || '...'}}
+					  </mb-inline>
+					 </td>
+				</tr>
+				<tr>
+					<td mb-translate>File size</td>
+					<td>{{ctrl.content.file_size}}</td>
+				</tr>
+				<tr>
+					<td mb-translate>Media type</td>
+					<td>
+					  <mb-inline
+						  ng-model="ctrl.content.media_type"
+						  mb-inline-type="text"
+						  mb-inline-label="Media type"
+						  mb-inline-enable="true"
+						  mb-inline-on-save="ctrl.updateContent()">
+						  {{ctrl.content.media_type || '...'}}
+					  </mb-inline>
+					 </td>
+				</tr>
+				<tr>
+					<td mb-translate>Mimetype</td>
+					<td>
+					  <mb-inline
+						  ng-model="ctrl.content.mime_type"
+						  mb-inline-type="text"
+						  mb-inline-label="Mimetype"
+						  mb-inline-enable="true"
+						  mb-inline-on-save="ctrl.updateContent()">
+						  {{ctrl.content.mime_type || '...'}}
+					  </mb-inline>
+					 </td>
+				</tr>
+				<tr>
+					<td mb-translate>Downloads count</td>
+					<td>{{::ctrl.content.downloads}}</td>
+				</tr>
+				<tr>
+					<td mb-translate>Creation Date</td>
+					<td>{{ctrl.content.creation_dtime | mbDate}}</td>
+				</tr>
+				<tr>
+					<td mb-translate>Last Modification Date</td>
+					<td>{{ctrl.content.modif_dtime | mbDate}}</td>
+				</tr>
 			</table>
 		</div>
 		<!-- Action bar -->
@@ -134,7 +133,7 @@
 			</md-button>
 			<md-button 
 				class = "md-raised md-accent"
-				ng-click="ctrl.deleteContent()">
+				ng-click="ctrl.deleteContent($event)">
 				<span mb-translate>Delete</span>
 			</md-button>
 		</div>
@@ -147,13 +146,14 @@
 	  -- add, remove or update the list.
 	  -->
 	<mb-titled-block
-		mb-progress="ctrl.isBusy || ctrl.isTermtaxonomiesBusy"
-		mb-more-actions="termtaxonomyActions"
 		mb-title="Term Taxonomies"
+		mb-more-actions="termtaxonomyActions"
+		mb-progress="ctrl.isBusy || ctrl.isTermtaxonomiesBusy"
+		layout="column"
 		ng-init="termtaxonomyActions = [{
 			title:'Add new term-taxonomy', 
 			icon:'add',
-			expression: 'ctrl.addTermTaxonomy()'
+			expression: 'ctrl.addTermTaxonomy($event)'
 		}]">
 		<md-chips
 			ng-model="ctrl.termTaxonomies" 
@@ -184,7 +184,7 @@
 		ng-init="metadataActions = [{
 			title: 'Add new metadatum',
 			icon: 'add',
-			expression: 'ctrl.createMetadata()'
+			expression: 'ctrl.createMetadata($event)'
 		}]">
 		<md-input-container 
 			ng-repeat="m in ctrl.metadata"
@@ -198,7 +198,7 @@
 				ng-change="ctrl.updateMetadata(m)"
 				ng-model-options="{updateOn:'default change blur',debounce:{default:3000,blur:0,change:0}}"></textarea>
 			<mb-icon
-				ng-click="ctrl.deleteMetadata(m)">delete</mb-icon>
+				ng-click="ctrl.deleteMetadata(m, $event)">delete</mb-icon>
 		</md-input-container>
 	</mb-titled-block>
 </md-content>
