--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,7 @@
 	<meta name="robots" content="noindex, nofollow">
 
 	<!--  injector:base-tag -->
-	<base href="/" >
+	<!--<base href="/" >-->
 	<!--  endinjector  -->
 
 </head>
