--- a/src/modules/tenant/editors/spa.html
+++ b/src/modules/tenant/editors/spa.html
@@ -1,8 +1,6 @@
 <md-content
 	mb-preloading="ctrl.working"
-	layout="column"
-	layout-padding 
-	flex>
+	layout="column">
 	<mb-titled-block
 		layout="column">
 		<div layout="row" layout-padding>
