--- a/src/modules/tenant/editors/tenant.html
+++ b/src/modules/tenant/editors/tenant.html
@@ -97,11 +97,11 @@
 		<div
 			layout="row">
 			<span flex></span>
-			<md-button
-				class="md-icon-button"
-				ng-click="ctrl.addOwners()">
+			<mb-button
+				class="mb-icon-button"
+				ng-click="ctrl.addOwners($event)">
 				<mb-icon>add</mb-icon>
-			</md-button>
+			</mb-button>
 		</div>
 	</mb-titled-block>
 	
